POR/RefEdge/src/objects/Reference_Refresh__c.object
<CustomObject>
    <description>Custom object to store Reference Refreshes(Bound 10)</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarantined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarantined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <label>Reference Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reference_Refreshs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Profile</label>
        <referenceTo>Reference_Basic_Information__c</referenceTo>
        <relationshipName>Reference_Refreshs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile Update Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Refreshs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh_Status__c</fullName>
        <label>Profile Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Update Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Profile Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference_Account__c</columns>
        <columns>Reference_Profile__c</columns>
        <columns>Reference_Refresh_Status__c</columns>
        <columns>Reference_Refresh_Owner__c</columns>
        <columns>Quarantined__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PU_only</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Is_Active__c</columns>
        <columns>Reference_Refresh_Owner__c</columns>
        <columns>Reference_Refresh_Status__c</columns>
        <columns>Quarantined__c</columns>
        <columns>Reference_Account__c</columns>
        <columns>Reference_Profile__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PU-</value>
        </filters>
        <label>PU-only</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PU-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>